# reversi

./: .clang-format  .gitignore  CMakeLists.txt  cell.cpp  cell.h  main.cpp  reversi.cpp  reversi.h
test/: reversi.cpp
